# AsczGameEngine

./: .gitignore  ADVANCED_OPTIMIZATIONS.md  ANIMATION_LUA_API.md  API_UPGRADE.md  ARCHITECTURE.md  AsczGame_Release.rar  BillboardAnimationDemo.cpp  CMakeLists.txt  Guide.md  HANDLE_MIGRATION.md  IMPROVEMENTS_SUMMARY.md  ImGui_Integration_Guide.md  ImGui_Usage_Example.cpp  MSAA_Implementation.md  PostProcessGuide.md  REFACTORING_SUMMARY.md  ReadMe.md  Snippets.cpp  TINYAPP_IMGUI_REFACTORING_PLAN.md  TinyLoader_backup.cpp  USAGE_EXAMPLES.md  VEC_REWORK_SUMMARY.md  backup_script.py  build_portable.bat  build_script.bat  compile.bat  compile_shader.bat  compile_shaders.bat  demo.lua  fun.lua  grass.md  guide.md  guide1.md  help.cpp  help1.md  help2.md  imgui.ini  lowercase.py  main.cpp  mathLib.lua  (+15 more)
.demo/: ProcedureAnimation.html
.demo/FLolStudio/: synth.cpp
.demo/LuaLol/: Makefile  README.md  test_script.lua
.demo/VFS/: index.html  index_standalone.html
Assets/: How.gltf  Untitled.glb
Assets/Characters/: EllenJoe.glb  Kayoko.gltf  Miyu.gltf  NewSelen.gltf  Selen.gltf  Untitled.glb  Why.glb
Assets/Pipelines/: example.json  pipelines.json
Config/: pipelines.json  postprocess.json
Guide/: AddMaterialProperty.md
Guide/ComputeShader/: ComputeShaderTutorial.md  cp.comp  cp.cpp
Shaders/: blended_texture.frag  compile_grass_wind.bat  compile_postprocess.bat  debug_coords.frag  grass_wind.comp.spv  hello.frag  hello.frag.spv  hello.vert  hello.vert.spv  hello1.frag  hello1.frag.spv  hi.vert.spv  pure_texture.frag  scaled_texture.frag  simple.frag  simple.vert  simple.vert.spv
Shaders/Billboard/: billboard.frag  billboard.frag.spv  billboard.vert  billboard.vert.spv
Shaders/Compute/: add.comp  add.comp.spv  grass.comp  grass.comp.spv  mat4.comp  mat4.comp.spv  test.comp  test.comp.spv  times2.comp  times2.comp.spv
Shaders/GrassWind/: grass_wind.comp
Shaders/PostProcess/: blur.comp  blur.comp.spv  final_blit.comp  final_blit.comp.spv  final_blit.frag  final_blit.frag.spv  final_blit.vert  final_blit.vert.spv  final_composite.comp  final_composite.comp.spv  fxaa.comp  fxaa.comp.spv  tonemap.comp  tonemap.comp.spv
Shaders/Rasterize/: MeshSkinned.frag  MeshSkinned.frag.spv  MeshSkinned.vert  MeshSkinned.vert.spv  MeshStatic.frag  MeshStatic.frag.spv  MeshStatic.vert  MeshStatic.vert.spv  PushDemo.frag  PushDemo.vert  RigMesh.frag  RigMesh.frag.spv  RigMesh.vert  RigMesh.vert.spv  StaticMesh.frag  StaticMesh.frag.spv  StaticMesh.vert  StaticMesh.vert.spv  StaticSingle.vert  StaticSingle.vert.spv  _Backup.frag  composite.frag  composite.frag.spv  composite.vert  raster.frag  raster.frag.spv  raster.vert  raster.vert.spv  raster1.frag  raster1.frag.spv  rasterDepth.frag  rasterDepth.frag.spv  transparent.frag  transparent.frag.spv  transparent.vert  transparent.vert.spv
Shaders/Sky/: demo.frag  sky.frag  sky.frag.spv  sky.vert  sky.vert.spv
backup/: StaticMesh_BVH.cpp
backup/AzBeta/: Particle.hpp
backup/AzGame/: Grass.cpp
backup/AzGame_include/: Grass.hpp
backup/Rig/: RigDemo.cpp  RigDemo.hpp
backup/SkeletonAndAnimation/: TinyPlayback.hpp
docs/: DescriptorEnhancements.md
ext/: MMD2BFDS.py
ext/asclib/: ascFS.hpp  ascPool.hpp  ascReg.hpp  ascType.hpp
ext/tiny3d/: tiny_obj_loader.h
ext/tinyExt/: tinyFS.hpp  tinyHandle.hpp  tinyPool.hpp  tinyRegistry.hpp  tinyType.hpp
ext/tinyLib/: tinyFS.hpp  tinyPool.hpp  tinyRegistry.hpp
ext/tinyLua/: README.md  tinyLua.hpp  tinyLuaDef.hpp
ext/tinyUI/: tinyUI_Vulkan.hpp
game/: GAME_SETUP.md  Test.txt  bullet.lua  enemy.lua  game_manager.lua  player.lua
game/Test/: player.lua
include/: AzVulk.h  AzVulkHelper.hpp
include/.ext/: Templates.hpp  TextEditor.cpp
include/Asciiz/: Project.hpp
include/Az3D/: Az3D.hpp  Billboard.hpp  Camera.hpp  GlobalUBO.hpp  InstanceSkinned.hpp  InstanceStatic.hpp  Light.hpp  LightManager.hpp  Map.hpp  Material.hpp  MaterialManager.hpp  Mesh.hpp  MeshManager.hpp  MeshSkinned.hpp  MeshStatic.hpp  MeshTypes.hpp  Model.hpp  ModelGPU.hpp  ModelLoader.hpp  ModelManager.hpp  RenderSystem.hpp  RenderingSystem.hpp  ResourceGroup.hpp  ResourceManager.hpp  RigDemo.hpp  RigInstance.hpp  RigSkeleton.hpp  SkeletonDemo.hpp  StaticInstance.hpp  Texture.hpp  TextureManager.hpp  TinyAnimation.hpp  TinyLoader.hpp  TinyMesh.hpp  TinyModel.hpp  TinyPlayback.hpp  TinyProject.hpp  TinyResource.hpp  TinyRig.hpp  TinySkeleton.hpp  (+1 more)
include/AzBeta/: Armature.hpp  AzBeta.hpp  Fluid.hpp  Map.hpp  Particle.hpp
include/AzCore/: Application.hpp  AzCore.hpp  Camera.hpp  ComputeManager.hpp  FpsManager.hpp  ImGuiWrapper.hpp  TinyChrono.hpp  TinyWindow.hpp  WindowManager.hpp
include/AzGame/: Application.hpp  Buffer.hpp  DepthManager.hpp  DescriptorManager.hpp  GraphicsPipeline.hpp  Grass.hpp  Renderer.hpp  ShaderManager.hpp  SwapChain.hpp  TextureManager.hpp  VulkanDevice.hpp  VulkanInstance.hpp  WindowManager.hpp  World.hpp
include/AzModel/: AzModel.hpp  Material.hpp  Mesh.hpp  Model3D.hpp
include/AzPlatform/: Input.h  Window.h
include/AzVulk/: Application.hpp  AzVulk.hpp  Buffer.hpp  CmdBuffer.hpp  CompositePipeline.hpp  ComputeTask.hpp  DataBuffer.hpp  DepthManager.hpp  Descriptor.hpp  DescriptorManager.hpp  DescriptorManager_old.hpp  DescriptorSets.hpp  Device.h  Device.hpp  DeviceVK.hpp  FrameBuffer.hpp  GraphicsPipeline.hpp  Helper.hpp  ImageVK.hpp  ImageWrapper.hpp  Instance.h  Instance.hpp  MSAAManager.hpp  Manager.h  Manager.hpp  Model.h  Model.hpp  MultiTextureManager.hpp  Pipeline.h  Pipeline.hpp  Pipeline_base.hpp  Pipeline_compute.hpp  Pipeline_core.hpp  Pipeline_graphic.hpp  Pipeline_include.hpp  Pipeline_manager.hpp  PostProcess.hpp  PushConstants.hpp  RasterPipeline.hpp  (+14 more)
nicescripts/: mmdToBSDF.py
old/: Application.cpp
scripts/: addScene.lua  advanced_animation_example.lua  array_api_reference.md  array_example.lua  collision_teleport.lua  demo.lua  handle_demo.lua  particle.lua  particle_physics.lua  player.lua  skeleton_api_reference.lua  skeleton_example.lua  smooth_follower.lua  smooth_follower_quat.lua  testCaller.lua
src/: AzVulk.cpp
textures/: create_texture.py
(+471 files in other folders)
